--- a/css/main-old.css
+++ b/css/main-old.css
@@ -77,7 +77,7 @@ textarea {
 }
 
 .img-container {
-    position: fixed;
+    position: relative; /* original: fixed */
     width: 70%;
     top: 10%;
     left: 15%;
@@ -88,7 +88,7 @@ textarea {
 }
 
 .img-container-hide {
-    position: fixed;
+    position: relative; /* original: fixed */
     width: 70%;
     top: 10%;
     left: 15%;
